// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CommentsBlock component with no comments 1`] = `
<body>
  <div>
    <div
      class="sc-bZCZoC qjAAu"
    >
      <div
        class="comment-block mt-2"
        data-testid="comments-block"
      >
        <h5>
          Customer Reviews :
        </h5>
        <div
          class="vstack gap-3"
        >
          <div>
            No review available.Be the first reviewer!
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should renders CommentsBlock component with comments 1`] = `
<body>
  <div>
    <div
      class="sc-bZCZoC qjAAu"
    >
      <div
        class="comment-block mt-2"
        data-testid="comments-block"
      >
        <h5>
          Customer Reviews :
        </h5>
        <div
          class="vstack gap-3"
        >
          <div
            data-testid="comment"
          >
            <div
              class="sc-ksJisA hKuXOJ card"
            >
              <div
                class="sc-fnOeiS dGYhpH card-header"
              >
                <div
                  class="sc-jIJgYh gPIvtQ"
                >
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  5
                   
                  /5
                </div>
              </div>
              <div
                class="sc-hBpgZr fzdmTd card-body"
              >
                <p
                  class="sc-fEyylQ bjhgma card-text"
                >
                  Great product!
                </p>
                <p
                  class="sc-bjEwCx bPzSwy card-text"
                >
                  author:
                  John Doe
                   
                  <br />
                   review id:
                  1
                </p>
              </div>
            </div>
          </div>
          <div
            data-testid="comment"
          >
            <div
              class="sc-ksJisA hKuXOJ card"
            >
              <div
                class="sc-fnOeiS dGYhpH card-header"
              >
                <div
                  class="sc-jIJgYh gPIvtQ"
                >
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI gPjntB"
                      data-testid="empty"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI gPjntB"
                      data-testid="empty"
                    >
                      ★
                    </span>
                  </div>
                  3
                   
                  /5
                </div>
              </div>
              <div
                class="sc-hBpgZr fzdmTd card-body"
              >
                <p
                  class="sc-fEyylQ bjhgma card-text"
                >
                  Could be better.
                </p>
                <p
                  class="sc-bjEwCx bPzSwy card-text"
                >
                  author:
                  Jane Smith
                   
                  <br />
                   review id:
                  2
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should renders CommentsBlock component with comments 2`] = `
<body>
  <div>
    <div
      class="sc-bZCZoC qjAAu"
    >
      <div
        class="comment-block mt-2"
        data-testid="comments-block"
      >
        <h5>
          Customer Reviews :
        </h5>
        <div
          class="vstack gap-3"
        >
          <div
            data-testid="comment"
          >
            <div
              class="sc-ksJisA hKuXOJ card"
            >
              <div
                class="sc-fnOeiS dGYhpH card-header"
              >
                <div
                  class="sc-jIJgYh gPIvtQ"
                >
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  5
                   
                  /5
                </div>
              </div>
              <div
                class="sc-hBpgZr fzdmTd card-body"
              >
                <p
                  class="sc-fEyylQ bjhgma card-text"
                >
                  Great product!
                </p>
                <p
                  class="sc-bjEwCx bPzSwy card-text"
                >
                  author:
                  John Doe
                   
                  <br />
                   review id:
                  1
                </p>
              </div>
            </div>
          </div>
          <div
            data-testid="comment"
          >
            <div
              class="sc-ksJisA hKuXOJ card"
            >
              <div
                class="sc-fnOeiS dGYhpH card-header"
              >
                <div
                  class="sc-jIJgYh gPIvtQ"
                >
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI sc-gXCJSa gPjntB fqfOft"
                      data-testid="filled"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI gPjntB"
                      data-testid="empty"
                    >
                      ★
                    </span>
                  </div>
                  <div
                    class="sc-jdkVqZ ivvINy"
                  >
                    <span
                      class="sc-hhWzdI gPjntB"
                      data-testid="empty"
                    >
                      ★
                    </span>
                  </div>
                  3
                   
                  /5
                </div>
              </div>
              <div
                class="sc-hBpgZr fzdmTd card-body"
              >
                <p
                  class="sc-fEyylQ bjhgma card-text"
                >
                  Could be better.
                </p>
                <p
                  class="sc-bjEwCx bPzSwy card-text"
                >
                  author:
                  Jane Smith
                   
                  <br />
                   review id:
                  2
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
